--- a/tilda-external-files.html
+++ b/tilda-external-files.html
@@ -7,7 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
 
 <!-- CSS: Замените ССЫЛКА_НА_CSS на ваш URL -->
-<link rel="stylesheet" href="ССЫЛКА_НА_CSS">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Gravitonum/aim-assistant-landing@main/dist/public/assets/index.css">
 
 <!-- JS: Замените ССЫЛКА_НА_JS на ваш URL -->
-<script type="module" crossorigin src="ССЫЛКА_НА_JS"></script>
+<script type="module" crossorigin src="https://cdn.jsdelivr.net/gh/Gravitonum/aim-assistant-landing@main/dist/public/assets/index.js"></script>
