--- a/tilda-external-files.html
+++ b/tilda-external-files.html
@@ -1,25 +1,113 @@
 <!-- COPY THIS TO TILDA HTML BLOCK -->
-<div id="root" style="min-height: 100vh; background: #f0f0f0; border: 2px dashed red;">
-  <div style="padding: 20px; text-align: center;">
-    <h3>Загрузка приложения...</h3>
-    <p>Если это сообщение не исчезает, значит React не стартует.</p>
-    <div id="debug-log" style="text-align: left; background: #333; color: #0f0; padding: 10px; margin-top: 20px; font-family: monospace;"></div>
+
+<!-- DIAGNOSTIC OVERLAY STYLE -->
+<style>
+  #app-diagnostic-overlay {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    width: 300px;
+    max-height: 400px;
+    background: rgba(0, 0, 0, 0.9);
+    color: #0f0;
+    font-family: monospace;
+    font-size: 12px;
+    padding: 10px;
+    z-index: 2147483647; /* Max Z-Index */
+    border: 1px solid #0f0;
+    overflow-y: auto;
+    display: block; /* Always visible initially */
+    pointer-events: none; /* Let clicks pass through */
+  }
+  #app-diagnostic-overlay.error {
+    border-color: red;
+    background: rgba(50, 0, 0, 0.9);
+    color: #ffaaaa;
+  }
+</style>
+
+<!-- ROOT CONTAINER -->
+<!-- Added !important and fixed positioning fallback to ensure visibility -->
+<div id="root" style="min-height: 100vh; width: 100%; position: relative; z-index: 1; background: #fff;">
+  <div style="padding: 50px; text-align: center;">
+    <h2 style="color: #333;">Загрузка приложения...</h2>
+    <p style="color: #666;">Если вы видите это сообщение дольше 5 секунд, проверьте логи диагностики справа внизу.</p>
   </div>
 </div>
 
+<div id="app-diagnostic-overlay">
+  <strong>System Status:</strong><br>
+  <div id="app-diagnostic-content">Initializing...</div>
+</div>
+
 <script>
-  // Simple logger
-  function log(msg) {
-    console.log('[App Debug]', msg);
-    const el = document.getElementById('debug-log');
-    if (el) el.innerHTML += '<div>' + msg + '</div>';
-  }
-  log('HTML block initialized');
-  log('Waiting for scripts...');
-  
-  window.addEventListener('error', function(e) {
-    log('ERROR: ' + e.message);
-  });
+  (function() {
+    const logEl = document.getElementById('app-diagnostic-content');
+    const overlay = document.getElementById('app-diagnostic-overlay');
+    
+    function log(msg, isError) {
+      console.log('[App Debug]', msg);
+      if (logEl) {
+        const line = document.createElement('div');
+        line.textContent = '>' + msg;
+        line.style.borderBottom = '1px solid #333';
+        line.style.padding = '2px 0';
+        if (isError) {
+          line.style.color = 'red';
+          if (overlay) overlay.classList.add('error');
+        }
+        logEl.appendChild(line);
+        // Auto scroll
+        overlay.scrollTop = overlay.scrollHeight;
+      }
+    }
+
+    log('Loader script started');
+
+    window.addEventListener('error', function(e) {
+      log('JS ERROR: ' + e.message, true);
+    });
+    
+    window.addEventListener('unhandledrejection', function(e) {
+      log('PROMISE ERROR: ' + (e.reason ? e.reason.message : e.reason), true);
+    });
+
+    // Check Root Element Availability
+    setTimeout(function() {
+      const root = document.getElementById('root');
+      if (!root) {
+        log('CRITICAL: #root element NOT found!', true);
+        // Attempt to create root
+        const newRoot = document.createElement('div');
+        newRoot.id = 'root';
+        document.body.appendChild(newRoot);
+        log('Created emergency #root in body');
+      } else {
+        log('Root element found. Rect: ' + JSON.stringify(root.getBoundingClientRect()));
+        if (root.getBoundingClientRect().height === 0) {
+           log('WARNING: Root has 0 height!', true);
+           root.style.minHeight = '100vh';
+        }
+      }
+    }, 1000);
+
+    // Final check
+    setTimeout(function() {
+      const root = document.getElementById('root');
+      if (root && root.children.length > 1) { // Assuming > 1 because of loader text
+         // React usually clears root or appends to it. 
+         // If React rendered, we might see different content.
+         log('Checking content...');
+         // Simple heuristic: did the loader text disappear?
+         if (root.innerText.includes('Загрузка приложения')) {
+            log('React likely NOT mounted (Loader still visible)', true);
+         } else {
+            log('React appears to be mounted');
+         }
+      }
+    }, 5000);
+
+  })();
 </script>
 
 <!-- FONTS -->
@@ -27,8 +115,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
 
-<!-- CSS: Замените ССЫЛКА_НА_CSS на ваш URL -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Gravitonum/aim-assistant-landing@master/dist/public/assets/index.css" onload="log('CSS loaded')" onerror="log('CSS failed to load')">
+<!-- CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Gravitonum/aim-assistant-landing@master/dist/public/assets/index.css" onload="console.log('CSS loaded')" onerror="console.error('CSS failed')">
 
-<!-- JS: Замените ССЫЛКА_НА_JS на ваш URL -->
-<script type="module" crossorigin src="https://cdn.jsdelivr.net/gh/Gravitonum/aim-assistant-landing@master/dist/public/assets/index.js" onload="log('JS loaded')" onerror="log('JS failed to load')"></script>
+<!-- JS -->
+<script type="module" crossorigin src="https://cdn.jsdelivr.net/gh/Gravitonum/aim-assistant-landing@master/dist/public/assets/index.js" onload="console.log('JS loaded')" onerror="console.error('JS failed')"></script>
