--- a/tilda-external-files.html
+++ b/tilda-external-files.html
@@ -116,7 +116,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
 
 <!-- CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Gravitonum/aim-assistant-landing@master/dist/public/assets/index.css" onload="console.log('CSS loaded')" onerror="console.error('CSS failed')">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Gravitonum/aim-assistant-landing@8e7c97e246da312574ffd4e152bf67bd65f5f22f/dist/public/assets/index.css" onload="console.log('CSS loaded')" onerror="console.error('CSS failed')">
 
 <!-- JS -->
-<script type="module" crossorigin src="https://cdn.jsdelivr.net/gh/Gravitonum/aim-assistant-landing@master/dist/public/assets/index.js" onload="console.log('JS loaded')" onerror="console.error('JS failed')"></script>
+<script type="module" crossorigin src="https://cdn.jsdelivr.net/gh/Gravitonum/aim-assistant-landing@8e7c97e246da312574ffd4e152bf67bd65f5f22f/dist/public/assets/index.js" onload="console.log('JS loaded')" onerror="console.error('JS failed')"></script>
